# python-package-template

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  add_five.html  genindex.html  hatch.toml  index.html  noxfile.py  objects.inv  pyproject.toml  readthedocs.yaml  readthedocs.yml  ruff.toml  searchindex.js  subtract_three.html  tox.ini  tox.toml  zensical.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.doctrees/: add_five.doctree  environment.pickle  index.doctree  subtract_three.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/linters/: .megalinter.yml  .yamllint.yml
.github/workflows/: cd.yml  ci.yml  docs_deploy.yml  release.yml  stale.yml
_sources/: add_five.rst.txt
docs/: add_five.rst  conf.py  index.md  index.rst  subtract_three.rst
docs/reference/: add_five.md  subtract_three.md
docs/tools/: codecov.md  github-pages.md  index.md  just.md  megalinter.md  mypy.md  nox.md  pre-commit.md  prek.md  pypi.md  pytest.md  renovate.md  ruff.md  ty.md  uv.md  zensical.md
docs_src/: add_five.py  subtract_three.py
src/python_package_template/: __init__.py  __main__.py  cli.py  main.py
tests/: __init__.py  cli_test.py  conftest.py  main_test.py
