# Build System
[build-system]
  requires = ["uv_build>=0.11.3,<0.12"]
  build-backend = "uv_build"

# Project Metadata
[project]
  name = "python-package-template-pypi" # Name has to be unique on pypi.
  version = "0.0.0" # Version set by GitHub release.
  description = "Python package template configuration."
  readme = "README.md"
  license = { file = "LICENSE" }
  authors = [{ name = "Daniel Mizsak", email = "daniel@mizsak.com" }]
  keywords = ["python", "template", "package", "github", "pypi"]
  classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
  ]
  requires-python = ">=3.12"
  dependencies = ["numpy>=2.4.4"]

  [project.urls]
    Repository = "https://github.com/daniel-mizsak/python-package-template/"
    Documentation = "https://daniel-mizsak.github.io/python-package-template/"
    Issues = "https://github.com/daniel-mizsak/python-package-template/issues/"

[dependency-groups]
  dev = [
    "coverage==7.13.5",
    "nox==2026.4.10",
    "prek==0.3.9",
    "pytest==9.0.3",
    "ruff==0.15.10",
    "ty==0.0.29",
  ]
  docs = ["zensical==0.0.32", "mkdocstrings-python==2.0.3"]

# Tools
# Uv
[tool.uv]
  exclude-newer = "1 week"

  [tool.uv.build-backend]
    module-root = "src"
    module-name = "python_package_template"
